; ModuleID = '/home/carl/AnghaBench/fastsocket/kernel/arch/mn10300/mm/extr_dma-alloc.c_dma_alloc_coherent.c'
source_filename = "/home/carl/AnghaBench/fastsocket/kernel/arch/mn10300/mm/extr_dma-alloc.c_dma_alloc_coherent.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.device = type { i32 }

@__GFP_DMA = common dso_local global i32 0, align 4
@__GFP_HIGHMEM = common dso_local global i32 0, align 4
@GFP_DMA = common dso_local global i32 0, align 4
@PAGE_SIZE = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i8* @dma_alloc_coherent(%struct.device* %0, i64 %1, i32* %2, i32 %3) #0 {
  %5 = alloca i8*, align 8
  %6 = alloca %struct.device*, align 8
  %7 = alloca i64, align 8
  %8 = alloca i32*, align 8
  %9 = alloca i32, align 4
  %10 = alloca i64, align 8
  %11 = alloca i8*, align 8
  store %struct.device* %0, %struct.device** %6, align 8
  store i64 %1, i64* %7, align 8
  store i32* %2, i32** %8, align 8
  store i32 %3, i32* %9, align 4
  %12 = load i32, i32* @__GFP_DMA, align 4
  %13 = load i32, i32* @__GFP_HIGHMEM, align 4
  %14 = or i32 %12, %13
  %15 = xor i32 %14, -1
  %16 = load i32, i32* %9, align 4
  %17 = and i32 %16, %15
  store i32 %17, i32* %9, align 4
  %18 = load %struct.device*, %struct.device** %6, align 8
  %19 = icmp eq %struct.device* %18, null
  br i1 %19, label %25, label %20

20:                                               ; preds = %4
  %21 = load %struct.device*, %struct.device** %6, align 8
  %22 = getelementptr inbounds %struct.device, %struct.device* %21, i32 0, i32 0
  %23 = load i32, i32* %22, align 4
  %24 = icmp ult i32 %23, -1
  br i1 %24, label %25, label %29

25:                                               ; preds = %20, %4
  %26 = load i32, i32* @GFP_DMA, align 4
  %27 = load i32, i32* %9, align 4
  %28 = or i32 %27, %26
  store i32 %28, i32* %9, align 4
  br label %29

29:                                               ; preds = %25, %20
  %30 = load i32, i32* %9, align 4
  %31 = load i64, i64* %7, align 8
  %32 = call i32 @get_order(i64 %31)
  %33 = call i64 @__get_free_pages(i32 %30, i32 %32)
  store i64 %33, i64* %10, align 8
  %34 = load i64, i64* %10, align 8
  %35 = icmp ne i64 %34, 0
  br i1 %35, label %37, label %36

36:                                               ; preds = %29
  store i8* null, i8** %5, align 8
  br label %55

37:                                               ; preds = %29
  %38 = load i64, i64* %10, align 8
  %39 = or i64 %38, 536870912
  %40 = inttoptr i64 %39 to i8*
  store i8* %40, i8** %11, align 8
  %41 = load i64, i64* %10, align 8
  %42 = inttoptr i64 %41 to i8*
  %43 = load i64, i64* %7, align 8
  %44 = call i32 @memset(i8* %42, i32 251, i64 %43)
  %45 = load i64, i64* %10, align 8
  %46 = inttoptr i64 %45 to i8*
  %47 = call i32 @virt_to_phys(i8* %46)
  %48 = load i32, i32* @PAGE_SIZE, align 4
  %49 = call i32 @mn10300_dcache_flush_inv_range2(i32 %47, i32 %48)
  %50 = load i64, i64* %10, align 8
  %51 = inttoptr i64 %50 to i8*
  %52 = call i32 @virt_to_bus(i8* %51)
  %53 = load i32*, i32** %8, align 8
  store i32 %52, i32* %53, align 4
  %54 = load i8*, i8** %11, align 8
  store i8* %54, i8** %5, align 8
  br label %55

55:                                               ; preds = %37, %36
  %56 = load i8*, i8** %5, align 8
  ret i8* %56
}

declare dso_local i64 @__get_free_pages(i32, i32) #1

declare dso_local i32 @get_order(i64) #1

declare dso_local i32 @memset(i8*, i32, i64) #1

declare dso_local i32 @mn10300_dcache_flush_inv_range2(i32, i32) #1

declare dso_local i32 @virt_to_phys(i8*) #1

declare dso_local i32 @virt_to_bus(i8*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
